enrich docu of P1042

--- a/docs/zh_TR/dynamic/p1042.md
+++ b/docs/zh_TR/dynamic/p1042.md
@@ -29,6 +29,67 @@
 
 買賣有一買一賣組成，賣出價與買入價之間的差值即為利潤。窮舉法就是羅列所有買入價和賣出價之間的組合，再算出利潤，取其中最大的利潤。
 
+舉個例子，給定價格序列`[7,1,5,3,6,4]`。買入價有六種選擇。用樹表示就是第1層（根節點為第0層）有六個子節點。賣出價的選則受買入點影响。比如，當在第一天買入時，可選的賣出點只能是第二天及以後；當在第二天買入時，可選的賣出點只能是第三天及以後；以此類推。
+
+```plantuml
+digraph d {
+    root [label=""]
+    aa [label=7]
+    ab [label=1]
+    ac [label=5]
+    ad [label=3]
+    ae [label=6]
+    af [label=4]
+
+    root -> aa
+    root -> ab
+    root -> ac
+    root -> ad
+    root -> ae
+    root -> af
+
+    aaa [label=1]
+    aab [label=5]
+    aac [label=3]
+    aad [label=6]
+    aae [label=4]
+
+    aa -> aaa
+    aa -> aab
+    aa -> aac
+    aa -> aad
+    aa -> aae
+
+    aba [label=5]
+    abb [label=3]
+    abc [label=6]
+    abd [label=4]
+
+    ab -> aba
+    ab -> abb
+    ab -> abc
+    ab -> abd
+
+    aca [label=3]
+    acb [label=6]
+    acc [label=4]
+
+    ac -> aca
+    ac -> acb
+    ac -> acc
+
+    ada [label=6]
+    adb [label=4]
+
+    ad -> ada 
+    ad -> adb
+
+    aea [label=4]
+
+    ae -> aea
+}
+```
+
 ### 代碼
 
 [include](../../../src/main/java/io/github/rscai/leetcode/bytedance/dynamic/Solution1042A.java)
@@ -74,6 +135,8 @@ $$
 
 1. 以最高價出現之前的最低價買入，再以最高價賣出
 2. 以最低價買入，再以之後的最高價賣出
+
+當最低價出現在最高價之前時，最高價之前的局部最低價就是全局最低價。
 
 用一次for loop就可以遍歷到三個買賣組合，再從中取利潤最大的組合即為全局利潤最大買賣組合。
 
