enhance document of P1042

--- a/docs/zh_TR/dynamic/p1042.md
+++ b/docs/zh_TR/dynamic/p1042.md
@@ -131,14 +131,129 @@ $$
 
 ## 一次遍歷
 
-當以最低價買入再以最高價賣出時，其利潤是最大的。但有時，最低價出現在最高價之後。當最低價出現在最高價之後時，產生最大利潤的買賣組合一定在以下兩個組合之中：
+假設有兩個買賣組合$$(buy_a, sell_a)$$和$$(buy_b, sell_b)$$，如果$$sell_a = sell_b$$且$$buy_a > buy_b$$，則利潤$$sell_b - buy_b > sell_a - buy_a$$。所以可以直接排除買入價大於之前買入價的組合。以樹表示，就是如果第二層節點的值（買入價）大於同層左邊任一節點的值，則以其為買入點的組合產生的利潤絕不會是最大利潤。（其左邊的節點的子節點值的集合包含了右邊節點的子節點值的集合。）
 
-1. 以最高價出現之前的最低價買入，再以最高價賣出
-2. 以最低價買入，再以之後的最高價賣出
+```plantuml
+digraph d {
+    root [label=""]
+    aa [label=7]
+    ab [label=1]
+    ac [label=5, style=filled, fillcolor=grey]
+    ad [label=3, style=filled, fillcolor=grey]
+    ae [label=6, style=filled, fillcolor=grey]
+    af [label=4, style=filled, fillcolor=grey]
 
-當最低價出現在最高價之前時，最高價之前的局部最低價就是全局最低價。
+    root -> aa
+    root -> ab
+    root -> ac
+    root -> ad
+    root -> ae
+    root -> af
 
-用一次for loop就可以遍歷到三個買賣組合，再從中取利潤最大的組合即為全局利潤最大買賣組合。
+    aaa [label=1]
+    aab [label=5]
+    aac [label=3]
+    aad [label=6]
+    aae [label=4]
+
+    aa -> aaa
+    aa -> aab
+    aa -> aac
+    aa -> aad
+    aa -> aae
+
+    aba [label=5]
+    abb [label=3]
+    abc [label=6]
+    abd [label=4]
+
+    ab -> aba
+    ab -> abb
+    ab -> abc
+    ab -> abd
+
+    aca [label=3, style=filled, fillcolor=grey]
+    acb [label=6, style=filled, fillcolor=grey]
+    acc [label=4, style=filled, fillcolor=grey]
+
+    ac -> aca
+    ac -> acb
+    ac -> acc
+
+    ada [label=6, style=filled, fillcolor=grey]
+    adb [label=4, style=filled, fillcolor=grey]
+
+    ad -> ada 
+    ad -> adb
+
+    aea [label=4, style=filled, fillcolor=grey]
+
+    ae -> aea
+}
+```
+
+再來看第二層「賣出價」。如果賣出價比賣入價小，則其利潤為負，且該值價以買入價的身份出現在第一層。且後續值都會以另一個更小的買入的賣出價出現。比如，以7為買入價，賣出價選擇有`[1, 5, 3, 6, 4]`。賣出價1比買入價7小，則後續`[5, 3, 6, 4]`會以賣出價出現在以1為買入價的組合中。「當賣出價相等時，買入價小的組合其利潤一定大於買入價大的組合。」所以，就無需計算後續以7為買入價的組合了。
+
+```plantuml
+digraph d {
+    root [label=""]
+    aa [label=7]
+    ab [label=1]
+    ac [label=5, style=filled, fillcolor=grey]
+    ad [label=3, style=filled, fillcolor=grey]
+    ae [label=6, style=filled, fillcolor=grey]
+    af [label=4, style=filled, fillcolor=grey]
+
+    root -> aa
+    root -> ab
+    root -> ac
+    root -> ad
+    root -> ae
+    root -> af
+
+    aaa [label=1]
+    aab [label=5, style=filled, fillcolor=grey]
+    aac [label=3, style=filled, fillcolor=grey]
+    aad [label=6, style=filled, fillcolor=grey]
+    aae [label=4, style=filled, fillcolor=grey]
+
+    aa -> aaa
+    aa -> aab
+    aa -> aac
+    aa -> aad
+    aa -> aae
+
+    aba [label=5]
+    abb [label=3]
+    abc [label=6]
+    abd [label=4]
+
+    ab -> aba
+    ab -> abb
+    ab -> abc
+    ab -> abd
+
+    aca [label=3, style=filled, fillcolor=grey]
+    acb [label=6, style=filled, fillcolor=grey]
+    acc [label=4, style=filled, fillcolor=grey]
+
+    ac -> aca
+    ac -> acb
+    ac -> acc
+
+    ada [label=6, style=filled, fillcolor=grey]
+    adb [label=4, style=filled, fillcolor=grey]
+
+    ad -> ada 
+    ad -> adb
+
+    aea [label=4, style=filled, fillcolor=grey]
+
+    ae -> aea
+}
+```
+
+可以看出，每個值都只被訪問了一次。所以，兩層循環可以合併成一層循環。
 
 ### 代碼
 
