--- a/docs/zh_TR/array/p1035.md
+++ b/docs/zh_TR/array/p1035.md
@@ -135,127 +135,30 @@ digraph d {
 
 使用了一個變量`max`，空間複雜度為$$\mathcal{O}(1)$$。
 
-## 一次遍歷法
+## 貪婪法
 
-將所有連續序列組合以樹的形式展示出來，可以發現很多重復的子樹。也就意味著有很多重復的計算。
+>貪婪演算法（英語：greedy algorithm），又稱貪心演算法，是一種在每一步選擇中都採取在目前狀態下最好或最佳（即最有利）的選擇，從而希望導致結果是最好或最佳的演算法。比如在旅行推銷員問題中，如果旅行員每次都選擇最近的城市，那這就是一種貪婪演算法。
+>
+>貪婪演算法在有最佳子結構的問題中尤為有效。最佳子結構的意思是局部最佳解能決定全域最佳解。簡單地說，問題能夠分解成子問題來解決，子問題的最佳解能遞推到最終問題的最佳解。
+>
+>### 細節
+>
+>1. 建立數學模型來描述問題。
+>2. 把求解的問題分成若干個子問題。
+>3. 對每一子問題求解，得到子問題的局部最佳解。
+>4. 把子問題的解局部最佳解合成原來解問題的一個解。
+>
+>實現該演算法的過程：
+>從問題的某一初始解出發；while 能朝給定總目標前進一步 do，求出可行解的一個解元素；
+>最後，由所有解元素組合成問題的一個可行解。
 
-```plantuml
-digraph d {
-    root [label=""]
-    a [label=1]
-    b [label=3]
-    c [label=5]
-    d [label=4]
-    e [label=7]
-    root -> a
-    root -> b
-    root -> c
-    root -> d
-    root -> e
+用貪婪法解本題的步驟為：
 
-    aa [label=3]
-    at [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    a -> aa
-    a -> at
-
-    aaa [label=5]
-    aat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aa -> aaa
-    aa -> aat
-
-    aaaa [label=4]
-    aaat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aaa -> aaaa
-    aaa -> aaat
-
-    aaaaa [label=7]
-    aaaat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aaaa -> aaaaa
-    aaaa -> aaaat
-    aaaaat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aaaaa -> aaaaat
-
-    ba [label=5]
-    bt [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    b -> ba
-    b -> bt
-
-    baa [label=4]
-    bat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    ba -> baa
-    ba -> bat
-
-    baaa [label=7]
-    baat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    baa -> baaa
-    baa -> baat
-    baaat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    baaa -> baaat
-
-    ca [label=4]
-    ct [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    c -> ca
-    c -> ct
-
-    caa [label=7]
-    cat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    ca -> caa
-    ca -> cat
-    caat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    caa -> caat
-
-    da [label=7]
-    dt [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    d -> da
-    d -> dt
-
-    dat [shape=triangle, label=nill, style=filled, fillcolor=grey]
-    da -> dat
-
-    et [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    e -> et
-}
-```
-
-「求一個數組中最大的連續遞增子序列」可以拆解為：
-
-1. 求數組中第一個連續遞增子序列
-2. 求數組剩餘部份中最大的連續遞增子序列
-3. 求第1和第2步求得連續遞增子序列中較大的一個
+1. 求出第一毎䀆量長的連續遞增子序列
+2. 求出數組剩餘部份中最長的連續遞增子序列
+3. 求第1和第2步中較長的子序列即為解
 
 第2步遞歸套用1至3步。
-
-舉個例子，給定數組`[1,3,5,4,7]`。首先，找出第一個連續遞增子序列`[1,3,5]`。然後，在剩餘數組中求出最大連續遞增子序列`[4,7]`。最後，求其最大長度為`3`。
-
-```plantuml
-digraph d {
-    root [label=""]
-    a [label=1]
-    d [label=4]
-    root -> a
-    root -> d
-
-    aa [label=3]
-    at [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    a -> aa
-    a -> at
-
-    aaa [label=5]
-    aat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aa -> aaa
-    aa -> aat
-    aaat [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    aaa -> aaat
-
-    da [label=7]
-    dt [shape=triangle, label=nil, style=filled, fillcolor=grey]
-    d -> da
-    d -> dt
-
-    dat [shape=triangle, label=nill, style=filled, fillcolor=grey]
-    da -> dat
-}
-```
 
 ### 代碼
 
@@ -278,3 +181,7 @@ digraph d {
 #### 空間複雜度
 
 使用了三個變量`max, length, previous`，空間複雜度為$$\mathcal{O}(1)$$。
+
+## 參考
+
+* [貪婪演算法](https://zh.wikipedia.org/wiki/貪婪演算法)
