extract dynamic programming and connected component as shared document

--- a/docs/zh_TR/array/p1019.md
+++ b/docs/zh_TR/array/p1019.md
@@ -94,15 +94,7 @@ $$
 
 ## 動態規劃法
 
->### 動態規劃
->
->動態規劃（英語：Dynamic programming，簡稱DP）是一種在數學、管理科學、電腦科學、經濟學和生物資訊學中使用的，通過把原問題分解為相對簡單的子問題的方式求解複雜問題的方法。
->
->動態規劃常常適用於有重疊子問題和最佳子結構性質的問題，動態規劃方法所耗時間往往遠少於樸素解法。
->
->動態規劃背後的基本思想非常簡單。大致上，若要解一個給定問題，我們需要解其不同部分（即子問題），再根據子問題的解以得出原問題的解。
->
->通常許多子問題非常相似，為此動態規劃法試圖僅僅解決每個子問題一次，從而減少計算量：一旦某個給定子問題的解已經算出，則將其記憶化儲存，以便下次需要同一個子問題解之時直接查表。這種做法在重複子問題的數目關於輸入的規模呈指數增長時特別有用。
+{% include "../shared/dynamic-programming.md" %}
 
 一個整數所處於的連續子序列等於以其前繼值為邊的連續序列加其自身再加以甚後繼值為邊緣點的連續序列。遞推公式為：
 
@@ -246,4 +238,3 @@ $$
 ## 參考
 
 * [快速排序](https://zh.wikipedia.org/wiki/快速排序)
-* [動態規劃](https://zh.wikipedia.org/wiki/動態規劃)
