--- a/docs/zh_TR/array/p1046.md
+++ b/docs/zh_TR/array/p1046.md
@@ -22,6 +22,8 @@
 
 ## 圖連通分量法
 
+{% include "../shared/connected-component.md" %}
+
 如果將每個區間視為圖中的一個點，將兩個區間重疊視為圖中兩個相鄰，則所有重疊的區間集合即為圖中的連通分量。
 
 舉個例子，給定區間集合`[[1,6],[4,7],[6,11],[13,16],[16,24]]`。該區間集合可建模為如下圖：
