--- a/docs/zh_TR/string/p1011.md
+++ b/docs/zh_TR/string/p1011.md
@@ -53,7 +53,7 @@
 
 ![debug-A2](p1011.figure/debug-A2.png)
 
-「單詞拆分」使用「有限狀態機」實現。
+「單詞拆分」使用「確定有限狀態機」實現。
 
 {% include "../shared/deterministic-finite-automaton.md" %}
 
