update slides of p1012

--- a/slides/string/p1012.slides.md
+++ b/slides/string/p1012.slides.md
@@ -406,7 +406,7 @@ digraph G {
 }
 ```
 
-<!-- slide data-notes="使用兩重循環羅列起始點start和截止點end組合。這𥚃起始點和截止點索引使用左閉右開模式，即子串包含起始點字串到截止點之前的字符，不包含截止點字符，且索引從0開始。比如，start0和end1確定了的子串僅包含第零個字符。外層循環羅列所有起始點選擇，字符中任一字符都可以做為起始點字符；內層循環羅列截止點，起始點之後的任一點都可以做為截止點。在內層循環內就可以获取每一個子串，在此檢測其是否包含重復字符，若否則比較其長度和乞今為止最長無重復字符子串長度。最終得到的乞今為止最長無重復字符子串長度即為全局最長無重復字符子串長度。" -->
+<!-- slide data-notes="使用兩重循環羅列起始點start和截止點end組合。這𥚃起始點和截止點索引使用左閉右開模式，即子串包含起始點字符到截止點之前的字符，不包含截止點字符，且索引從0開始。比如，start0和end1確定了的子串僅包含第零個字符。外層循環羅列所有起始點選擇，字符串中任一字符都可以做為起始點字符；內層循環羅列截止點，起始點之後的任一點都可以做為截止點。在內層循環內就可以获取每一個子串，在此檢測其是否包含重復字符，若否則比較其長度和乞今為止最長無重復字符子串長度。最終得到的乞今為止最長無重復字符子串長度即為全局最長無重復字符子串長度。" -->
 ## 代码实现
 
 ```java
@@ -454,7 +454,7 @@ digraph G {
     for (int start = 0; start < s.length(); start++) {
 ```
 
-<!-- slide data-notes="內層循環循環了多次，每一次迭代次為n-1減start次。start的從0至n-1取值，內層循環每次迭代的次數為從n-1至1的遞減整數序列。" -->
+<!-- slide data-notes="內層循環循環了多次，每一次迭代次數為n-1再減start次。start的值從0至n-1，內層循環每次迭代的次數為從n-1至1的遞減整數序列。" -->
 ## 时间复杂度
 
 ```java
@@ -485,7 +485,7 @@ C_{time} &= \sum_{s=0}^{n-1} \sum_{e=s+1}^{n-1}(e-s) \\
 \end{aligned}
 $$
 
-<!-- slide data-notes="方法`lengthOfLongestSubstring`使用了三個整型變量`maxLength, start, end`。`isUnique`構造了一個HashSet局部變量，這個HashSet最多存儲n個字符。所以，合計空間複雜度為big O n。" -->
+<!-- slide data-notes="這𥚃使用了三個整型變量`maxLength, start, end`。`isUnique`內構造了一個HashSet局部變量，這個HashSet最多存儲n個字符。所以，合計空間複雜度為big O n。" -->
 ## 空间复杂度
 
 ```java
@@ -916,7 +916,7 @@ digraph d {
 }
 ```
 
-<!-- slide data-notes="题目是求無重復字符的最長子串，而「無重復字符子串」的判定可以以遞歸的形式描述為：若以s+1為起始、以e為截止的子串無重復子符且第s個字符未在s+1至e之間出現，則以s為起始、以e為截止的子串不包含重復字符。由「無重復字符子串」判定可描述為遞歸形式，和子串存在重疊兩點，可以得出該問題適用動態規劃。「無重復字符子串」的判定為可重用的「重叠子問題」" -->
+<!-- slide data-notes="题目是求無重復字符的最長子串，而「無重復字符子串」的判定可以以遞歸的形式描述為：若以s+1為起始、以e為截止的子串無重復字符且第s個字符未在s+1至e之間出現，則以s為起始、以e為截止的子串不包含重復字符。由「無重復字符子串」判定可描述為遞歸形式，和子串存在重疊兩點，可以得出該問題適用動態規劃。「無重復字符子串」的判定為可重用的「重叠子問題」" -->
 ## 最佳子结构
 
 $$
